modified the footer and fixed minor spacing issues

--- a/frontend/src/app/promotion/Promotion.module.css
+++ b/frontend/src/app/promotion/Promotion.module.css
@@ -83,7 +83,7 @@
 }
 
 .promoInfo {
-  padding: .75rem .5rem;
+  padding: 1rem 1.25rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
